Awesome systems for adding fonts to our project, using map, mixin, variable, iterpolation, loop each and code fragmentation

--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -1,3 +1,7 @@
 $base-font-size: 16px;
 
+
+$fonts: ('Roboto Bold': 'roboto-bold-webfont', 'Roboto Light': 'roboto-light-webfont');
+
 $img-path: "../images";
+$font-path: "../fonts";
