--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,6 +1,7 @@
 @import "../../node_modules/normalize.css/normalize";
 
 @import "./globals";
+@import "./typography/fonts";
 
 @import "layout/header";
 
