--- a/src/css/app.css
+++ b/src/css/app.css
@@ -330,25 +330,58 @@ html, body {
   margin-inline: auto;
   width: 100%;
   max-width: 60rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: nowrap;
 }
 
 .menu {
-  background-color: peru;
+  align-self: flex-end;
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-start;
+  flex-wrap: nowrap;
 }
 .menu__item {
-  color: blue;
+  color: darkgray;
+  background-color: white;
   text-decoration: none;
+  display: inline-block;
+  padding: 1.25rem 0.9375rem;
+  text-transform: uppercase;
+  font-family: "Roboto Light", sans-serif;
+  font-size: 1rem;
+  transition: all 200ms ease-in;
+}
+.menu__item:first-child {
+  border-top-left-radius: 0.25rem;
+}
+.menu__item:last-child {
+  border-top-right-radius: 0.25rem;
+}
+.menu__item:link {
+  border-bottom: 0.1875rem solid lightgreen;
+}
+.menu__item:visited {
+  border-bottom: 0.1875rem solid lightgreen;
 }
 .menu__item--active, .menu__item:hover {
-  color: lightgoldenrodyellow;
+  border-bottom: 0.1875rem solid lightgreen;
+  color: white;
+  background-color: darkgray;
+}
+.menu__item:active {
+  border-bottom: 0.1875rem solid lightgreen;
 }
 
 .logo {
   background-image: url("../images/logo.svg");
-  width: 6.25rem;
-  height: 6.25rem;
+  width: 4rem;
+  height: 4rem;
   display: inline-block;
   background-size: cover;
+  margin: 0.625rem;
 }
 
 /*# sourceMappingURL=app.css.map */
