--- a/src/sass/components/logo.scss
+++ b/src/sass/components/logo.scss
@@ -3,8 +3,9 @@
 
 .logo {
   background-image: url("#{$img-path}/logo.svg");
-  width: rem(100px);
-  height: rem(100px);
+  width: rem(64px);
+  height: rem(64px);
   display: inline-block;
   background-size: cover;
+  margin: rem(10px);
 }
